# Wixen-Terminal

./: .gitignore  Cargo.toml  LICENSE-APACHE  PLAN.md  README.md  terminal-features-research.txt
.github/workflows/: a11y-desktop.yml  ci.yml  release.yml
benches/: scrollback.rs  terminal_grid.rs  vt_parser.rs
c/: .gitignore  CMakeLists.txt  IMPLEMENTATION_LOG.md  README.md  vcpkg.json
c/.github/workflows/: ci.yml
c/config/: default.toml
c/docs/: IMPLEMENTATION_LOG.md
c/include/wixen/a11y/: child_fragment.h  events.h  frame_update.h  provider.h  state.h  text_boundaries.h  text_provider.h  tree.h
c/include/wixen/config/: config.h  keybindings.h  lua_engine.h  serial.h  session.h  ssh.h  watcher.h  wsl.h
c/include/wixen/core/: bg_task.h  buffer.h  cell.h  cursor.h  error_detect.h  grid.h  hyperlink.h  image.h  keyboard.h  modes.h  mouse.h  path_util.h  selection.h  shutdown.h  sixel.h  startup_timer.h  table_detect.h  terminal.h  url.h  xmalloc.h
c/include/wixen/ipc/: ipc.h
c/include/wixen/pty/: pty.h
c/include/wixen/render/: atlas.h  colors.h  pipeline.h  renderer.h  software.h
c/include/wixen/search/: search.h
c/include/wixen/shell_integ/: heuristic.h  shell_integ.h
c/include/wixen/ui/: audio.h  clipboard.h  color_picker.h  default_terminal.h  explorer_menu.h  focus.h  history.h  jumplist.h  palette_dialog.h  panes.h  settings_dialog.h  tabs.h  tray.h  window.h
c/include/wixen/vt/: action.h  parser.h
c/shaders/: terminal.hlsl
c/src/: main.c  wixen.manifest
c/src/a11y/: child_fragment.c  events.c  frame_update.c  provider.c  state.c  text_boundaries.c  text_provider.c  tree.c
c/src/config/: config.c  keybindings.c  lua_engine.c  serial.c  session.c  ssh.c  watcher.c  wsl.c
c/src/core/: bg_task.c  buffer.c  cell.c  cursor.c  error_detect.c  grid.c  hyperlink.c  image.c  keyboard.c  modes.c  mouse.c  path_util.c  selection.c  shutdown.c  sixel.c  startup_timer.c  table_detect.c  terminal.c  url.c  xmalloc.c
c/src/ipc/: ipc.c
c/src/pty/: pty.c
c/src/render/: atlas.cpp  colors.c  pipeline.c  renderer.c  software.c
c/src/search/: search.c
c/src/shell_integ/: heuristic.c  shell_integ.c
c/src/ui/: audio.c  clipboard.c  color_picker.c  default_terminal.c  explorer_menu.c  focus.c  history.c  jumplist.c  palette_dialog.c  panes.c  settings_dialog.c  tabs.c  tray.c  window.c
c/src/vt/: parser.c
c/tests/: test_a11y_tree.c  test_audio.c  test_buffer.c  test_buffer_extended.c  test_cell.c  test_cell_extended.c  test_clipboard.c  test_colors.c  test_colors_extended.c  test_config.c  test_config_extended.c  test_cursor.c  test_error_detect.c  test_error_detect_extended.c  test_events.c  test_events_extended.c  test_grid.c  test_grid_extended.c  test_grid_visible_text.c  test_heuristic.c  test_history.c  test_hyperlink.c  test_image.c  test_integration.c  test_ipc.c  test_keybindings.c  test_keybindings_extended.c  test_keyboard.c  test_keyboard_extended.c  test_lua.c  test_lua_extended.c  test_modes.c  test_mouse.c  test_pane_zoom.c  test_panes.c  test_panes_extended.c  test_parser.c  test_parser_csi.c  test_parser_extended.c  test_parser_osc.c  (+185 more)
config/: default.toml
crates/wixen-a11y/: Cargo.toml
crates/wixen-a11y/src/: events.rs  fragment.rs  grid_provider.rs  history_provider.rs  lib.rs  palette_provider.rs  provider.rs  settings_provider.rs  text_provider.rs  tree.rs
crates/wixen-config/: Cargo.toml
crates/wixen-config/src/: lib.rs  lua.rs  macros.rs  plugin.rs  serial.rs  session.rs  ssh.rs  watcher.rs  wsl.rs
crates/wixen-core/: Cargo.toml
crates/wixen-core/src/: attrs.rs  buffer.rs  cell.rs  cursor.rs  error_detect.rs  grid.rs  hyperlink.rs  image.rs  keyboard.rs  lib.rs  modes.rs  mouse.rs  selection.rs  session.rs  structured_detect.rs  table_detect.rs  terminal.rs  themes.rs  url.rs
crates/wixen-ipc/: Cargo.toml
crates/wixen-ipc/src/: lib.rs  messages.rs  pipe.rs  session.rs
crates/wixen-pty/: Cargo.toml
crates/wixen-pty/src/: handoff.rs  lib.rs
crates/wixen-render/: Cargo.toml
crates/wixen-render/src/: atlas.rs  bg_image.rs  blur.rs  colors.rs  custom_shader.rs  dwrite.rs  image.wgsl  lib.rs  pipeline.rs  post_process.rs  shader.wgsl  soft.rs
crates/wixen-search/: Cargo.toml
crates/wixen-search/proptest-regressions/: lib.txt
crates/wixen-search/src/: lib.rs
crates/wixen-shell-integ/: Cargo.toml
crates/wixen-shell-integ/src/: heuristic.rs  lib.rs  tmux.rs
crates/wixen-ui/: Cargo.toml
crates/wixen-ui/src/: audio.rs  command_palette.rs  default_terminal.rs  explorer_menu.rs  handoff.rs  help.rs  history.rs  jumplist.rs  lib.rs  panes.rs  plugin_bridge.rs  settings.rs  tabs.rs  tray.rs  window.rs
crates/wixen-vt/: Cargo.toml
crates/wixen-vt/proptest-regressions/: parser.txt
crates/wixen-vt/src/: action.rs  lib.rs  parser.rs
docs/: accessibility-testing.md  architecture.html  architecture.md  default-terminal.md  principles.md  user-guide.html  user-guide.md
installer/: wixen.iss  wixen.wxs
schemas/: config.schema.json
scripts/: fetch-openconsole.ps1  wixen.lua  wixen.ps1
src/: crash.rs  main.rs
tests/: integration.rs
tests/a11y-uia/: README.md  TerminalAccessibilityTests.cs  WixenA11y.Tests.csproj  WixenExecutable.cs
tests/nvda-smoke/: package.json  smoke.mjs
winget/: PratikP1.WixenTerminal.yaml
